# utils

./: .gitignore  README.md
bash/: README.md  hello.sh
bash/lock/: hardlink.sh  multiple_task.sh
bash/utils/: utils.sh
cpp/backontrack/: ServiceLocatorPattern.cc  StrategyPattern.cc  reflection.cc
cpp/backtobasic/: cast.cc  comsumer_producer.cc  concept_expression_cpp20.cc  decltype_auto.cc  dod_simd.cc  expressionEvaluate.cc  findnthlargest.cc  fold_expression_cpp17.cc  polymorphism.cc  qualifier.cc  shared_from_this.cc  shared_ptr.cc  shared_ptr_custom.cc  unique_ptr.cc  unique_ptr_custom.cc
cpp/backtobasic/c++23/: consteval_if.cc  python_liked.cc  unreachable  unreachable.cc
cpp/call/: Makefile.am  README.md  call  configure.ac  main.cc
cpp/call/common/: definition.cc  definition.h
cpp/call/state/: stateMachine.cc
cpp/call/utils/: utils.h
cpp/concurrency/: async.cc  atomic.cc  condition_variable.cc  lock.cc  lockfree.cc  thread.cc  thread_pool_by_std_async.cc  thread_vs_async.md
cpp/functional/: decay.cc  main.cc
cpp/graph/: main.cc  shortestPath.cc
cpp/http/: main.cc  rest.cc
cpp/learning/fsm/: README.md
cpp/learning/fsm/enum/: main.cc
cpp/learning/fsm/statePattern/: main.cc
cpp/metaprogramming/: main.cc
cpp/thinkcell/: problem.cc
cpp/utils/: definitions.h  utils.h
cpp/valueCategory/: main.cc
ielts/listening/part1/: udemy32.md  udemy33.md  udemy34.md  udemy35.md
python/: a.json  prompt.py
