# Makefile.am
AUTOMAKE_OPTIONS = foreign  # Tells Automake that we're using a simpler setup
bin_PROGRAMS = call      # Name of the executable

# List of source files for the executable
call_SOURCES = \
    main.cc \
    common/definition.cc

AM_CXXFLAGS = -std=c++20

# Optional: if you need to link with external libraries, you can specify them like this:
# call_LDADD = -lm   # Link with math library (uncomment if needed)
